deps/v8/test/message/arrow-param-after-rest.out
*%(basename)s:7: SyntaxError: Rest parameter must be last formal parameter
(...x, y) => 10
     ^
SyntaxError: Rest parameter must be last formal parameter
